pagination on review history

--- a/media/css/devreg/reviewers.styl
+++ b/media/css/devreg/reviewers.styl
@@ -772,13 +772,32 @@ button.search, .log-filter-outside button {
     top: -20px;
     width: auto;
 }
+#review-files table.activity tr.comm-notes-paginator {
+    border-bottom: none;
+    display: none;
+
+    a {
+        display: none;
+        float: right;
+        margin-right: 5px;
+    }
+}
+.comm-note {
+    pre {
+        padding-left: 0;
+    }
+    strong {
+        color: lighten($medium-gray, 15%);
+    }
+}
 #review-files table.activity {
     th {
       width: 25%;
       padding-right: 1em;
     }
     tr {
-        border-top: 1px dotted #ccc;
+        border-bottom: 1px dotted #ccc;
+        border-top: none;
 
         td {
             padding: 15px 0;
@@ -790,8 +809,8 @@ button.search, .log-filter-outside button {
             padding-bottom: 0;
         }
     }
-    tr:first-child {
-        border-top: 0 none;
+    tr:last-child {
+        border-bottom: 0 none;
     }
 }
 #review-files .listing-header span.light {
