--- a/mkt/commonplace/templates/commonplace/index.html
+++ b/mkt/commonplace/templates/commonplace/index.html
@@ -2,7 +2,8 @@
 <html{% if appcache %} manifest="{{ url('commonplace.appcache')|urlparams(repo=repo) }}"{% endif %}>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no,
+                                   initial-scale=1, maximum-scale=1">
     <title>Firefox Marketplace</title>
     <meta property="og:title" content="Firefox Marketplace">
     <meta property="og:type" content="website">
@@ -12,51 +13,12 @@
     <link rel="icon" href="{{ media('fireplace/img/logos/128.png') }}" sizes="128x128">
     <link rel="icon" href="{{ media('fireplace/img/logos/64.png') }}" sizes="64x64">
     <link rel="icon" href="{{ media('fireplace/img/logos/32.png') }}" sizes="32x32">
-
-    {% if settings.DEBUG and repo == 'fireplace' %}
-      <link rel="stylesheet" href="{{ media('fireplace/css/splash.styl.css') }}">
-
-      <!-- These styles need to come first. -->
-      <link rel="stylesheet" href="{{ media('fireplace/css/reset.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/typography.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/site.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/header.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/navbar.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/cat-dropdown.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/listing.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/infobox.styl.css') }}">
-
-      <!-- These styles don't need to be in an order. -->
-      <link rel="stylesheet" href="{{ media('fireplace/css/account.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/buttons.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/categories.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/detail-content-ratings.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/detail.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/error-screens.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/feed.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/feedback.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/forms.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/form-modal.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/incompatible.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/lightbox.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/menu.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/modal.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/nominate.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/notification.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/promo-grid.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/purchase.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/ratings.styl.css') }}">
-      <link rel="stylesheet" href="{{ media('fireplace/css/search.styl.css') }}">
-    {% else %}
-      {% if include_splash -%}
-        <link rel="stylesheet" href="{{ media(repo + '/css/splash.css') }}">
-      {% endif -%}
-      <link rel="stylesheet" href="{{ media(repo + '/css/include.css') }}">
-    {% endif %}
-
-    <link title="Firefox Apps"
-          rel="search" type="application/opensearchdescription+xml"
-          href="{{ url('opensearch') }}">
+    {% if include_splash -%}
+      <link rel="stylesheet" href="{{ media(repo + '/css/splash.css') }}">
+    {% endif -%}
+    <link rel="stylesheet" href="{{ media(repo + '/css/include.css') }}">
+    <link title="Firefox Apps" rel="search" href="{{ url('opensearch') }}"
+          type="application/opensearchdescription+xml">
     <meta name="fragment" content="!">
     {% if media_origin -%}
       <link rel="dns-prefetch" href="{{ media_origin }}">
@@ -64,10 +26,10 @@
     {{ newrelic_header()|safe if repo == 'fireplace' }}
   </head>
   <body class="home{{ ' overlayed' if repo == 'fireplace' }}" data-languages="{{ settings.AMO_LANGUAGES|json }}" data-settings="{{ site_settings|json }}" data-build-id-js="{{ BUILD_ID_JS }}" data-media="{{ MEDIA_URL }}" data-repo="{{ repo }}">
-
     {% if not robots -%}
       <noscript><p>Sorry, you need JavaScript to access the Marketplace.</p></noscript>
     {% endif -%}
+
     <div id="splash-overlay">
       <div class="throbber"><b></b><b></b><b></b></div>
     </div>
@@ -75,6 +37,7 @@
     <header id="site-header" class="header site-header"></header>
 
     <div class="cloak"></div>
+
     <main>
       <nav id="site-nav" class="site-nav" role="navigation"></nav>
       <div id="page" class="page" role="main"></div>
@@ -82,7 +45,7 @@
 
     <footer id="site-footer"></footer>
 
-    <!-- screenshot lightbox -->
+    <!-- Screenshot lightbox. -->
     <div id="lightbox">
       <section>
         <ul class="content"></ul>
@@ -100,11 +63,7 @@
       <script src="https://dme0ih8comzn4.cloudfront.net/js/feather.js"></script>
     {% endif %}
 
-    {% if settings.DEBUG and repo == 'fireplace' %}
-      <script type="text/javascript" data-main="/media/fireplace/js/main" src="{{ media('fireplace/js/lib/require.js') }}"></script>
-    {% else %}
-      <script type="text/javascript" src="{{ media(repo + '/js/include.js') }}" defer></script>
-    {% endif %}
+    <script type="text/javascript" src="{{ media(repo + '/js/include.js') }}" defer></script>
     {{ newrelic_footer()|safe if repo == 'fireplace' }}
   </body>
 </html>
