--- a/mkt/developers/templates/developers/skeleton_impala.html
+++ b/mkt/developers/templates/developers/skeleton_impala.html
@@ -130,14 +130,21 @@
       <div class="overlay centre login">
         <section>
           <h2>{{ _('Please sign in') }}</h2>
-        {% if waffle.switch('firefox-accounts') %}
-          <p>
-            {% trans url='https://login.persona.org/' %}
-              Just log in or register with your
-              <a href="{{ url }}">Persona</a> account below.
-            {% endtrans %}
-          </p>
-        {% endif %}
+          {% if not waffle.switch('firefox-accounts') %}
+            <p>
+              {% trans url='https://login.persona.org/' %}
+                Just log in or register with your
+                <a href="{{ url }}">Persona</a> account below.
+              {% endtrans %}
+            </p>
+          {% else %}
+            <p>
+              {% trans url='https://accounts.firefox.com/' %}
+                Just log in or register with your
+                <a href="{{ url }}">Firefox Account</a> account below.
+              {% endtrans %}
+            </p>
+          {% endif %}
           <footer>
             <a class="button browserid" href="#">{{ _('Sign in / Sign up') }}</a>
           </footer>
