--- a/mkt/commonplace/templates/commonplace/includes/open_graph.html
+++ b/mkt/commonplace/templates/commonplace/includes/open_graph.html
@@ -2,7 +2,8 @@
   <meta property="og:title" content="{{ app.name }}">
   <meta property="og:type" content="website">
   <meta property="og:image" content="{{ app.get_icon_url(64) }}">
-  <meta name="description" content="{{ app.description }}">
+  <meta name="description"
+        content="{{ app.description|striptags|escape|truncate(140) }}">
 {% else %}
   <meta property="og:title" content="Firefox Marketplace">
   <meta property="og:type" content="website">
