count threads rather than versions (bug 1090436)

--- a/mkt/reviewers/templates/reviewers/includes/review_history_commbadge.html
+++ b/mkt/reviewers/templates/reviewers/includes/review_history_commbadge.html
@@ -4,7 +4,7 @@
   <table id="review-files" class="item-history"
          data-slug="{{ product.app_slug }}" data-note-types="{{ mkt.comm.U_NOTE_TYPES()|json }}"
          {# Don't use urlparams because we don't want to urlencode the slug. #}
-         data-comm-thread-url="{{ url('comm-thread-list')|urlparams(limit=product.versions.count()) + '&app=' + product.app_slug }}"
+         data-comm-thread-url="{{ url('comm-thread-list')|urlparams(limit=product.threads.count()) + '&app=' + product.app_slug }}"
          data-thread-id-placeholder="0" data-comm-note-url="{{ url('comm-note-list', 0) }}">
     {# Results populated below by reviewers_commbadge.js (Commbadge API) #}
 
